--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,24 @@
                     <version>1.17.1</version>
                 </dependency>
 
+                <dependency>
+                    <groupId>org.apache.poi</groupId>
+                    <artifactId>poi</artifactId>
+                    <version>5.4.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.poi</groupId>
+                    <artifactId>poi-ooxml</artifactId>
+                    <version>5.4.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.xmlbeans</groupId>
+                    <artifactId>xmlbeans</artifactId>
+                    <version>5.3.0</version>
+                </dependency>
+
             </dependencies>
         </profile>
     </profiles>
